<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:gravity="center"
                android:text="@string/a_no" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#85040000" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:gravity="center"
                android:text="@string/time" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#85040000" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#888888"
                android:text="@string/bz" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#85040000" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#888888"
                android:text="@string/ce" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#85040000" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="#888888"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ca" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#85040000" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="#888888"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mpca" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#85040000" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="#888888"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>